# egui_wgpu

./: .gitignore  Cargo.toml  README.md
examples/: egui_wgpu.rs
src/: lib.rs  painter.rs  pipeline.rs
src/shader/: egui.wgsl
