[package]
name = "egui_wgpu"
version = "0.17.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[package.metadata.docs.rs]
all-features = true


[features]
default = ["clipboard", "default_fonts", "links", "persistence"]

# enable cut/copy/paste to OS clipboard.
# if disabled a clipboard will be simulated so you can still copy/paste within the egui app.
clipboard = ["egui-winit/clipboard"]

# If set, egui will use `include_bytes!` to bundle some fonts.
# If you plan on specifying your own fonts you may disable this feature.
default_fonts = ["egui/default_fonts"]

# enable opening links in a browser when an egui hyperlink is clicked.
links = ["egui-winit/links"]

# enable persisting native window options and egui memory
persistence = [
  "egui-winit/persistence",
  "egui/persistence",
  "epi", # also implied by the lines below, see https://github.com/rust-lang/cargo/issues/8832
  "epi/file_storage",
  "epi/persistence",
]

# experimental support for a screen reader
screen_reader = ["egui-winit/screen_reader"]


[dependencies]
egui = { version = "0.17.0",  default-features = false, features = [
  "convert_bytemuck",
  "single_threaded",
] }
egui-winit = { version = "0.17.0", default-features = false, features = ["epi"] }
epi = { version = "0.17.0", optional = true }

ahash = "0.7"
bytemuck = "1.7"
wgpu = "0.12"

[dev-dependencies]
image = { version = "0.24", default-features = false, features = ["png"] }
pollster = "0.2"
